<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/dollar_sign"
            android:title="@string/menu_main"
            android:actionMenuTextColor="?attr/colorOnPrimary" />
        <item
            android:id="@+id/nav_my_debts"
            android:icon="@drawable/dollar_sign"
            android:title="@string/menu_my_debts" />
        <item
            android:id="@+id/nav_someone_owes_me"
            android:icon="@drawable/dollar_sign"
            android:title="@string/menu_someone_owes_me" />
    </group>
</menu>