<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddDebtDetails">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/debtAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/Theme.LabProject2.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:collapseIcon="@drawable/dollar_sign"
            app:popupTheme="@style/Theme.LabProject2.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <Switch
        android:id="@+id/debtorSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:checked="false"
        android:shadowColor="#00FFFFFF"
        android:textSize="24sp"
        android:theme="@style/SwitchTheme"
        android:track="@drawable/custom_track"
        app:layout_constraintBottom_toTopOf="@+id/addCreditorName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtAppbar" />

    <TextView
        android:id="@+id/debtorSwitchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="15dp"
        android:text="@string/debtor_switch"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/addCreditorName"
        app:layout_constraintStart_toEndOf="@+id/debtorSwitch"
        app:layout_constraintTop_toBottomOf="@+id/debtAppbar" />

    <EditText
        android:id="@+id/addCreditorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:autofillHints="John Doe, Jane Doe"
        android:ems="10"
        android:foregroundTint="#004643"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/debtorSwitch" />

    <TextView
        android:id="@+id/returnUntil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="15dp"
        android:text="@string/date_def"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCreditorName" />

    <ImageButton
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#00FFFFFF"
        app:flow_verticalBias="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addCreditorName"
        app:srcCompat="@drawable/date_icon"
        app:tint="@color/button" />

    <EditText
        android:id="@+id/debtSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:ems="10"
        android:hint="@string/amount_hint"
        android:inputType="number"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintBottom_toTopOf="@+id/deleteBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/returnUntil" />

    <Spinner
        android:id="@+id/currencySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.3
"
        app:layout_constraintBottom_toTopOf="@+id/deleteBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="@+id/debtSum"
        app:layout_constraintTop_toBottomOf="@+id/returnUntil" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/tertiary"
        android:padding="23dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/delete_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/button"
        android:textColor="@color/white"
        android:padding="23dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>